<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.demofancymonk.SigninActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_user_name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/edit_text_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/Username"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/cardview_dark_background" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/cardview_dark_background" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:layout_margin="40dp"
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/signup"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_margin="40dp"
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/signin"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</LinearLayout>