<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButton"
    tools:context="com.example.android.demofancymonk.DeliverActivity">

    <EditText
        android:id="@+id/comment_box"

        android:layout_width="263dp"
        android:layout_height="109dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:background="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="91dp" />

    <Button
        android:id="@+id/comment_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/colorWhite" />

    <com.example.android.demofancymonk.ui.CanvasClass
        android:id="@+id/canvas_view"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_above="@+id/clear_canvas"
        android:layout_marginBottom="20dp" />
    <Button
        android:id="@+id/clear_canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="53dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/clear"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
